# rust-pkg-deb

./: Cargo.toml  README.md
etc/misc/: COPYRIGHT
etc/pkg-scripts/: postinst  postrm  preinst  prerm
etc/systemd/: rust-deb-daemon.service
