[package]
name = "rust-deb-daemon"
version = "0.1.0"
authors = ["soleinik <162591+soleinik@users.noreply.github.com>"]
edition = "2018"

description = "example rust application packaged for deb distribution"
homepage = "www.soleinik.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



[package.metadata.deb]
depends = "$auto, systemd"
section = "utils"
priority = "optional"
assets = [
    # binary
    ["target/release/rust-deb-daemon", "usr/local/bin/", "755"],
    # config
    ["etc/conf/rust-deb-daemon.conf", "usr/local/etc/rust-deb-app/", "644"],
    # systemd unit
    ["etc/systemd/rust-deb-daemon.service", "lib/systemd/system/", "644"],

    # assets
    ["etc/misc/COPYRIGHT", "/usr/share/doc/rust-deb-daemon/", "644"],
    ["LICENSE", "/usr/share/doc/rust-deb-daemon/", "644"],
]

maintainer-scripts = "etc/pkg-scripts"
conf-files=[
    "usr/local/etc/conf/rust-deb-daemon.conf",
]

